# sqlite-wasm-component

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh  example.wasm  wasi_snapshot_preview1.wasm
frontend/: build.sh  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.js
frontend/src/: App.tsx  imports.ts  index.tsx
frontend/src/components/: Hello.tsx
frontend/src/wasm/: example.core.wasm  example.core2.wasm  example.d.ts  example.js
frontend/src/wasm/exports/: example-host-db.d.ts
frontend/src/wasm/imports/: example-host-db.d.ts  filesystem.d.ts  imports.d.ts  monotonic-clock.d.ts  poll.d.ts  preopens.d.ts  stderr.d.ts  stdin.d.ts  stdout.d.ts  streams.d.ts  types.d.ts  wall-clock.d.ts  wasi-cli-base-environment.d.ts  wasi-cli-base-exit.d.ts  wasi-filesystem-preopens.d.ts  wasi-filesystem-types.d.ts  wasi-io-streams.d.ts
frontend/src/worker/: imports.ts  service-worker.ts  state.ts  tsconfig.json  types.d.ts
src/: lib.rs
wit/: host.wit
